@@ -7,6 +7,8 @@ Changelog
 - Fix bug in ``reindex_directory``: we need to index the path relativ to the
   base directory, not the full filename.
 
+- Start reindexing in parallel while files are still being collected.
+
 
 1.2.4 (2013-11-27)
 ------------------
